kyverno-tests/extra/resources/bad-latest-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-latest-pod
  namespace: fintech-workloads
spec:
  containers:
    - name: app
      image: busybox:latest
