kyverno-tests/extra/resources/bad-no-probes-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-no-probes-pod
  namespace: fintech-workloads
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sleep", "3600"]
