kyverno-tests/extra/resources/good-probes-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-probes-pod
  namespace: fintech-workloads
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sleep", "3600"]
      livenessProbe:
        exec:
          command: ["true"]
        periodSeconds: 10
      readinessProbe:
        exec:
          command: ["true"]
        periodSeconds: 5
