kyverno-tests/extra/resources/good-tagged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-tagged-pod
  namespace: fintech-workloads
spec:
  containers:
    - name: app
      image: busybox:1.36
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
